--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -2,6 +2,7 @@
 
 android {
   compileOptions {
+      sourceCompatibility JavaVersion.VERSION_22
       targetCompatibility JavaVersion.VERSION_22
   }
 }
