--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-android/*
 .DS_Store
 dist
 dist-ssr
@@ -20,6 +19,7 @@ coverage
 
 # Editor directories and files
 .vscode/*
+android
 !.vscode/extensions.json
 .idea
 *.suo
